# rpq-view

./: .gitignore  AndOrDag.cpp  AndOrDag.h  AndOrDagTest.cpp  CMakeLists.txt  CSR.cpp  CSR.h  CompareAndOrDagDfa.cpp  Dockerfile  LICENSE  NFA.cpp  NFA.h  README.md  Rpq2NFAConvertor.cpp  Rpq2NFAConvertor.h  Util.cpp  Util.h  affinity_propagation.cpp  chooseMatViewsTheoCompare-batch.cpp  chooseMatViewsTheoCompare.cpp  matMostFrequent.cpp  matMostFrequent.txt  ours.cpp  productGraphQueryBatch.cpp  swarmGuide.cpp  unitCost.cpp  varyMemBudget.cpp  varyWorkloadSz.cpp
ap_output/: ap_100_0.2-view-manual.txt  ap_100_0.2-view.txt  ap_100_0.2.txt  ap_100_0.4-view-manual.txt  ap_100_0.4-view.txt  ap_100_0.4.txt  ap_100_0.6-view-manual.txt  ap_100_0.6-view.txt  ap_100_0.6.txt  ap_100_0.8-view-manual.txt  ap_100_0.8-view.txt  ap_100_0.8.txt
parser/: rpq.g4  rpq.interp  rpqBaseListener.cpp  rpqBaseListener.h  rpqBaseVisitor.cpp  rpqBaseVisitor.h  rpqLexer.cpp  rpqLexer.h  rpqLexer.interp  rpqLexer.tokens  rpqListener.cpp  rpqListener.h  rpqParser.cpp  rpqParser.h  rpqVisitor.cpp  rpqVisitor.h
test_data/AddQueryTestSuite/: ConcatKleeneTest_expected_output.txt  ConcatKleeneTest_query.txt  ConcatTest_expected_output.txt  KleeneIriConcatTest_query.txt  OverlapTest_expected_output.txt  OverlapTest_query.txt  QuerySubqueryTest_query.txt  SingleInverseIriTest_expected_output.txt  SingleIriKleeneTest_expected_output.txt  SingleIriKleeneTest_query.txt  SingleParenthesizedIriTest_query.txt
test_data/AnnotateLeafCostCardTestSuite/: SimpleTest_expected_output.txt
test_data/ChooseMatViewsTestSuite/: KleeneIriConcatTest_expected_output_0_3.txt  KleeneIriConcatTest_expected_output_0_4.txt  KleeneIriConcatTest_expected_output_0_max.txt  KleeneIriConcatTest_expected_output_1_3.txt  KleeneIriConcatTest_expected_output_1_4.txt  KleeneIriConcatTest_expected_output_1_max.txt  KleeneIriConcatTest_expected_output_2_3.txt  KleeneIriConcatTest_expected_output_2_4.txt  KleeneIriConcatTest_expected_output_2_max.txt  KleeneIriConcatTest_expected_output_3_3.txt  KleeneIriConcatTest_expected_output_3_4.txt  KleeneIriConcatTest_expected_output_3_max.txt  KleeneIriConcatTest_expected_output_4_3.txt  KleeneIriConcatTest_expected_output_4_max.txt  KleeneIriConcatTest_input.txt  KleeneIriConcatTest_query2freq.txt  KleeneIriConcatTest_stats.txt
test_data/ExecuteTestSuite/: AlternationTest_expected_output.txt  AlternationTest_input.txt  AlternationTest_query.txt  ConcatKleeneTest_expected_output.txt  ConcatTest_expected_output.txt  ConcatTest_input.txt  ConcatTest_query.txt  IriKleeneStarConcat_expected_output.txt  IriKleeneStarConcat_input.txt  IriKleeneStarConcat_query.txt  KleeneIriConcatTest_expected_output.txt  KleeneStarIriConcatTest_expected_output.txt  KleeneStarIriConcatTest_input.txt  KleeneStarIriConcatTest_query.txt  SingleInverseIriTest_expected_output.txt  SingleInverseIriTest_query.txt  SingleIriTest_expected_output.txt  SingleIriTest_input.txt  graph.txt
test_data/PlanTestSuite/: KleeneIriConcatTest_expected_output.txt
test_data/ReplanWithMaterializeTestSuite/: KleeneIriConcatTest_cost.txt  KleeneIriConcatTest_expected_output.txt  KleeneIriConcatTest_mat.txt
test_data/StatisticsTestSuite/: SimpleTest_expected_output.txt  SimpleTest_graph.txt
test_data/TopoSortTestSuite/: KleeneIriConcatTest_expected_output.txt
test_data/UseCntTestSuite/: SingleRootInclusionTest_expected_output.txt  SingleRootInclusionTest_input.txt  SingleRootTest_expected_output.txt  SingleRootTest_input.txt  TwoRootsTest_expected_output.txt  TwoRootsTest_input.txt
workload_sz/: queries_100_0.txt  queries_100_1.txt  queries_100_2.txt  queries_100_3.txt  queries_100_4.txt  queries_100_5.txt  queries_100_6.txt  queries_100_7.txt  queries_100_8.txt  queries_100_9.txt  queries_10_0.txt  queries_10_1.txt  queries_10_2.txt  queries_10_3.txt  queries_10_4.txt  queries_10_5.txt  queries_10_6.txt  queries_10_7.txt  queries_10_8.txt  queries_10_9.txt
